[package]
name = "blent"
version = "0.0.0-dev"
edition = "2021"
description = "CLI for managing multiple docker-compose projects"
license = "GPL-3"
authors = ["thorou"]
repository = "https://github.com/thorio/blent"

[dependencies]
anyhow = "1.0.86"
bollard = "0.16.1"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
color-eyre = "0.6.3"
itertools = "0.13.0"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["macros"] }

[profile.release]
strip = true
lto = true

# improve debug backtrace performance with color-eyre
[profile.dev.package.backtrace]
opt-level = 3
