[package]
name = "blent"
version = "0.0.0-dev"
edition = "2021"
description = "CLI for managing multiple docker-compose projects"
license = "GPL-3"
authors = ["thorou"]
repository = "https://github.com/thorio/blent"

[dependencies]
anyhow = "1.0.86"
bollard = "0.17.0"
chrono = { version = "0.4.38", default-features = false }
chrono-humanize = "0.2.3"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
color-eyre = "0.6.3"
comfy-table = "7.1.1"
itertools = "0.13.0"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_yml = "0.0.11"
stderrlog = { version = "0.6.0", default-features = false }
tokio = { version = "1.38.0", features = ["macros"] }

[profile.release]
strip = true
lto = true

[lints.rust]
non_ascii_idents = "forbid"
noop_method_call = "warn"
single_use_lifetimes = "warn"
unused_crate_dependencies = "warn"
unused_lifetimes = "deny"
unused_qualifications = "warn"

[lints.clippy]
cognitive_complexity = "warn"
dbg_macro = "warn"
empty_structs_with_brackets = "warn"
equatable_if_let = "warn"
explicit_iter_loop = "warn"
match_wildcard_for_single_variants = "warn"
or_fun_call = "warn"
question_mark = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
unnecessary_wraps = "warn"
unwrap_used = "warn"
use_self = "warn"
used_underscore_binding = "warn"
wildcard_imports = "warn"
missing_panics_doc = "warn"
